fix contacts title on mobile viewport

--- a/assets/style.css
+++ b/assets/style.css
@@ -267,8 +267,7 @@ main {
 @media (max-width: 1100px) {
   .contacts h2 {
     font-size: 36px;
-    max-width: 275px;
-    text-align: center;
+    max-width: 300px;
   }
   .contacts {
     width: 90vw;
@@ -353,6 +352,9 @@ footer {
   font-family: HelveticaNeueCyrMedium;
   color: black;
 }
+.br {
+  display: none;
+}
 @media (max-width: 1100px) {
   footer {
     flex-direction: column;
@@ -368,5 +370,8 @@ footer {
   .right-collum-footer {
     margin-top: 40px;
     justify-content: flex-start;
+  }
+  .br {
+    display: block;
   }
 }
